plugins {
    id 'java'
    id 'java-library'
    id 'jacoco'
}

group = 'com.github.hmcts'
version = 'DEV-SNAPSHOT'

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url = 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.register('highLevelDataSetup', JavaExec) {
    mainClass = "uk.gov.hmcts.reform.prl.HighLevelDataSetupApp"
    classpath += sourceSets.main.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']

    def envArg = System.getenv('ENVIRONMENT')?.toUpperCase() ?: 'LOCAL'
    args = [envArg]

    doFirst {
        println ">> Running highLevelDataSetup with ENVIRONMENT=${envArg}"
    }
}

dependencies {
    implementation('com.github.hmcts:befta-fw:9.2.4') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }

    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'ch.qos.logback:logback-classic:1.5.18'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'pl.pragmatists:JUnitParams:1.1.1'
}
